# opengl-with-cmake-and-vscode-

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: Solider.cpp
